13-03-2015 6.1.26
- Projects2: Controller action that takes over closed weeks from Projects v1, also during Projects2 install.
- Improved error message of cron when ioncube is not installed
- Fixed duplicate key error when creating projects
- Holidays: Added 5th of may as a holiday every 5 year (2015, 2020 etc. ) (Only in Dutch holidays)
- Bookmarks: Added extra column view to bookmarks
- Addressbook: Fixed measurements of contact Photo thumb
- Billing: Removed faulty costcode controller file
- Mail/Sieve: Added check if the mailbox extension for sieve is available on the mailserver
- Files: Removed acl check for diskquota when deleting a file
- Files: Added check for file already exist in addFileSystemFile

06-03-2015 6.1.25
- Email: Fixed namespace problem with sending email.
- Files: Fixed problem with deletion of files when deleting them one at a time. (Sometimes the file was not deleted from disk after that.)

05-03-2015 6.1.24
- fixed unlink permission denied error on windows when sending email
- New config option $config['disable_mail'] = true; to disable all mail sending
- Calendar: Added pager to categories selection in the event dialog
- Email/Sieve: Added possibility to check for sieve capabilities on the server.
- Billing: Fixed problem with duedate calculation if the bTime field is empty

02-03-2015 6.1.23
- Fixed GOTA on windows servers
- JsonPost validation and fixes for the TabbedFormDialogs
- Event store will not try to search for events when calendar is not found
- Use OPENSSL_CIPHER_3DES for smime encryption
- Billing: Fixed problem that the trackingcodes or costcodes are not saved when only editing one of those fields in the items grid.
- Billing: Fixed display of 0 in the pdf_template and odf_template fields of the order status when they are not set
- Tickets: Fixed enters in email templates for mails that are send to the ticketagent.

26-02-2015 6.1.22
- Billing: sales agent names optional in order grid.